atualizando a pagina dragon ball
atualizando a pagina do dragon ball ...

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -167,7 +167,13 @@ aside{
     height: auto;
 
 }
-
+.img-side{
+    border-radius: 3px;  
+    align-self: center;
+    width: 170px;
+    height: auto;
+    padding-top: 230px;
+}
 a:link{text-decoration: none;
 color: lightsteelblue;}
 a:hover{text-decoration: underline;
