atualização da história e das imagens
atualização da história , mais imagens e layout

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -257,7 +257,7 @@ aside {
 
 #botaoresponsive {
     width:50px;
-    heigth:50px;
+    height:50px;
     margin-top:15px;
     margin-left: 2px;
     position: absolute;
@@ -440,7 +440,7 @@ aside {
 
 #botaoresponsive {
     width:50px;
-    heigth:50px;
+    height:50px;
     margin-top:15px;
     margin-left: 2px;
     position: absolute;
