--- a/css/estilo.css
+++ b/css/estilo.css
@@ -19,7 +19,7 @@
 
 input{
     width: 450px;
-     height:25px;
+    height:25px;
     background-color:skyblue;
     border:black solid 1px;
     
@@ -330,6 +330,7 @@ h1 {
     text-align: center;
     padding-top:10px; 
     padding-bottom:10px;
+    padding-left: 20px;
 }
 aside {
     padding: 2%;
@@ -413,6 +414,7 @@ h1 {
     text-align: center;
     padding-top:10px; 
     padding-bottom:10px;
+    padding-left: 40px;
 }
 aside {
     padding: 2%;
@@ -499,6 +501,7 @@ h1 {
     text-align: center;
     padding-top:10px; 
     padding-bottom:10px;
+    padding-left: 40px;
 }
 aside {
     padding: 2%;
