--- a/css/estilo.css
+++ b/css/estilo.css
@@ -150,6 +150,22 @@ aside{
 .clear{
     clear: both;
 }
+.img-goku_footer{
+    width: 80px;
+    height: auto;
+    vertical-align: bottom;
+    transform: rotate(335deg);
+}
+.img-footer{
+    transition: all .5s;
+    border: 4px solid transparent;
+    
+}
+.img-footer:hover{
+    border: 4px solid #136497;
+    border-radius: 50%;
+
+}
 
 .img{
     
@@ -255,7 +271,7 @@ aside {
     color: white;
     text-align: center;
     line-height: 50px;
-    height: 50px;
+    height: auto;
     width: 100%;
 }
 
@@ -273,7 +289,12 @@ aside {
     display: block;
     
 }
-    
+.mobile nav ul li {
+    display: inline-block;
+}
+.img-goku_footer{
+    transform: rotate(320deg);
+}
 }
 
 @media (min-width: 480px) and (max-width: 767px){
@@ -342,7 +363,7 @@ aside {
     color: white;
     text-align: center;
     line-height: 50px;
-    height: 50px;
+    height: auto;
     width: 100%;
 }
 
@@ -360,6 +381,12 @@ aside {
     cursor: pointer;
     display: block;
     
+}
+.mobile nav ul li {
+    display: inline-block;
+}
+.img-goku_footer{
+    transform: rotate(320deg);
 }
 }
 
@@ -385,6 +412,7 @@ nav ul li {
     padding-left: 0px;
     
 }
+
 /*espaço reservado para o menu */
 #menu {
     width: 100%;
@@ -426,7 +454,7 @@ aside {
     color: white;
     text-align: center;
     line-height: 50px;
-    height: 50px;
+    height: auto;
     width: 100%;
 }
 
@@ -443,6 +471,13 @@ aside {
     cursor: pointer;
     display: block;
     
+}
+.mobile nav ul li {
+    display: inline-block;
+}
+.img-goku_footer{
+    transform: rotate(342deg);
+    width: 60px;
 }
 }
 
@@ -513,7 +548,7 @@ aside {
     color: white;
     text-align: center;
     line-height: 50px;
-    height: 50px;
+    height: auto;
     width: 100%;
 }
 
@@ -530,5 +565,11 @@ aside {
     cursor: pointer;
     display: block;
     
+}
+.mobile nav ul li {
+    display: inline-block;
+}
+.img-goku_footer{
+    transform: rotate(450deg);
 }
 }
